# rmbrain

./: .gitignore  DAPR_ENDPOINT_ASSESSMENT.md  README.md  SERVICES_ASSESSMENT.md  dapr.yaml
canonical/: README.md  pyproject.toml
canonical/entities/: client_link.v1.json  document.v1.json  interaction.v1.json  relationship.v1.json  riskprofile.v1.json  suitability_assessment.v1.json
canonical/events/: event_envelope.v1.json
canonical/events/client/: client.created.v1.json  client.status_changed.v1.json  client.updated.v1.json
canonical/events/document/: document.access_changed.v1.json  document.ingested.v1.json  document.updated.v1.json
canonical/events/interaction/: document.linked.v1.json  interaction.cancelled.v1.json  interaction.completed.v1.json  interaction.created.v1.json  interaction.documents_attached.v1.json  interaction.finalized.v1.json  interaction.initiated.v1.json  interaction.review_started.v1.json  interaction.status_changed.v1.json  interaction.superseded.v1.json
canonical/events/product/: product.artefact.linked.v1.json  product.created.v1.json  product.deactivated.v1.json  product.status_changed.v1.json  product.updated.v1.json
canonical/events/relationship/: relationship.at_risk.v1.json  relationship.created.v1.json  relationship.health_updated.v1.json  relationship.preferences_updated.v1.json  relationship.status_changed.v1.json  relationship.terminated.v1.json
canonical/events/riskprofile/: riskprofile.activated.v1.json  riskprofile.created.v1.json  riskprofile.superseded.v1.json  riskprofile.updated.v1.json  suitability.assessed.v1.json  suitability.breached.v1.json
canonical/events/task/: document.uploaded.v1.json  interaction.finalized.v1.json  riskprofile.changed.v1.json  task.completed.v1.json  task.created.v1.json  task.expired.v1.json  task.status_changed.v1.json
canonical/semantics/: client.v1.semantic.yaml
canonical/src/canonical/: __init__.py  registry.py
canonical_schemas/: README.md  USAGE_EXAMPLES.md  pyproject.toml
canonical_schemas/src/canonical_schemas/: __init__.py  actor.py  (+1 more)
(+105 files in other folders)
